# Project-AIP-1

./: README.md
cpp/admin/: CMakeLists.txt  automaticUpdateConfig.json  main.cpp  sheet1.cpp  sheet2.cpp  vcpkg.json
go/auth/: db.go  go.mod  go.sum  main.go
go/telegram_bot/: go.mod  main.go  requests.go
go/timetable/: db.go  go.mod  main.go
